# inorbit-robot-connectors

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  README.md
.claude/skills/: inorbit-connector-developer
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: gausium_legacy_workflows.yml  gausium_open_platform_workflows.yml  gausium_workflows.yml  lint.yml  lint_requirements.txt  mir_workflows.yml  omron_flowcore_workflows.yml  otto_workflows.yml  test-and-lint.yml
gausium_connector/: .dockerignore  CONTRIBUTING.md  LICENSE  README.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
gausium_connector/LICENSES/: MIT.txt
gausium_connector/cac_examples/: ActionDefinition.yaml  MissionTracking.yaml  README.md  RobotFootprint.yaml
gausium_connector/config/: .gitignore  README.md  example.env  example.yaml
gausium_connector/docker/: Dockerfile  README.md  build.sh
gausium_connector/inorbit_gausium_connector/: __init__.py  inorbit_gausium_connector.py
gausium_connector/inorbit_gausium_connector/src/: __init__.py  connector.py  mission.py  (+1 more)
gausium_legacy_connector/: CONTRIBUTING.md  requirements.txt  setup.cfg  setup.py
gausium_legacy_connector/config/: .gitignore
gausium_legacy_connector/docker/: build.sh
gausium_open_platform_connector/: .dockerignore  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
gausium_open_platform_connector/LICENSES/: MIT.txt
gausium_open_platform_connector/cac_examples/: RobotFootprint.yaml
gausium_open_platform_connector/config/: README.md  example.yaml
gausium_open_platform_connector/docker/: README.md  build.sh
gausium_open_platform_connector/docker/examples/: README.md  docker-compose.yaml  example.env  fleet.yaml  run.sh
gausium_open_platform_connector/inorbit_gausium_connector/: __init__.py  inorbit_gausium_connector.py
gausium_open_platform_connector/inorbit_gausium_connector/config/: __init__.py  connector_model.py
gausium_open_platform_connector/inorbit_gausium_connector/src/: connector.py  mission.py
gausium_open_platform_connector/inorbit_gausium_connector/src/robot/: __init__.py  base_api_client.py  robot.py  robot_api.py
gausium_open_platform_connector/inorbit_gausium_connector/tests/: __init__.py  conftest.py  test_config_validation.py  test_connector.py  test_mission_tracking.py  test_robot_api.py
instock_connector/: .bumpversion.cfg  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  qodana.sarif.json  qodana.yaml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
instock_connector/cac_examples/: README.md  instock_actions.yaml  instock_data_sources.yaml
instock_connector/config/: .gitignore  example.env  myinstock.example.yaml
instock_connector/inorbit_instock_connector/: __init__.py
instock_connector/scripts/: install_service.sh  instock-connector@.service  start.sh  tron.py
instock_connector/user_scripts/: .gitignore
mir_connector/: .bumpversion.toml  .dockerignore  .gitignore  LICENSE  README.md  setup.py
mir_connector/cac_examples/: README.md  actions.yaml  data_sources.yaml  mission_tracking.yaml  native_mission.yaml  status_definition.yaml
mir_connector/config/: .gitignore  example.env  fleet.example.yaml  fleet.simple.example.yaml  my_fleet.example.yaml
mir_connector/docker/: Dockerfile  README.md  build.sh  docker-compose.example.yaml  docker-compose.metrics.example.yaml  docker-compose.yaml  otel-collector-config.example.yaml
mir_connector/inorbit_mir_connector/: __init__.py  inorbit_mir_connector.py  mir100_start.py
mir_connector/systemd/: mir-connector.service
neura_connector/: .dockerignore  .gitignore  LICENSE  README.md  setup.py
neura_connector/config/: .gitignore  robot.example.yaml
neura_connector/docker/: Dockerfile  build.sh  deploy.sh  docker-compose.yaml
neura_connector/inorbit_neura_connector/: __init__.py  inorbit_neura_connector.py
omron_flowcore_connector/: .dockerignore  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  REUSE.toml  pyproject.toml
omron_flowcore_connector/cac/: actions.yaml  footprint.yaml  mission_definitions.yaml  mission_tracking.yaml
omron_flowcore_connector/config/: .gitignore  example.env  fleet.example.yaml
omron_flowcore_connector/docker/: Dockerfile  build.sh  docker-compose.example.yaml
omron_flowcore_connector/inorbit_omron_connector/: __init__.py  main.py
omron_flowcore_connector/inorbit_omron_connector/src/: commands.py  connector.py
omron_flowcore_connector/inorbit_omron_connector/src/config/: models.py
omron_flowcore_connector/inorbit_omron_connector/src/mission/: behavior_tree.py  datatypes.py  executor.py  tracking.py  translator.py  tree_builder.py  worker_pool.py
omron_flowcore_connector/inorbit_omron_connector/src/omron/: api_client.py  arcl_client.py  mock_arcl_server.py  mock_client.py  models.py  robot_manager.py
omron_flowcore_connector/tests/: test_arcl_client.py  test_commands.py  test_config_models.py  test_connector.py  test_dock_undock_shutdown.py  test_ip_override.py  test_mission_executor.py  test_mission_tracking.py  test_mission_tracking_robustness.py  test_mock_client.py  test_mock_client_dropoff_key.py  test_mock_segment_generation.py  test_mock_simulation.py  test_omron_behavior_tree_nodes.py  test_omron_features.py  test_pause_resume.py  test_reproduce_dropoff_issue.py  test_robot_manager.py  test_translation_pickup_fix.py  test_translation_validation.py  test_translator.py
omron_flowcore_connector/tests/data/: map.png.license
otto_connector/: CONTRIBUTING.md  LICENSE  README.md  otto_connector.py  requirements.txt
otto_connector/cac_examples/: README.md  actions.yaml  data_sources.yaml  mission_tracking.yaml
otto_connector/config/: example.env  robot-definitions.example.yaml
otto_connector/otto_connector/: connector.py  http_client.py  robot.py  values.py  wamp_client.py
otto_connector/src/: otto_connector.py  requirements.txt
otto_connector/systemd/: otto-connector.service
(+123 files in other folders)
